Fix overflow bug with contact form when the form is not active

--- a/src/components/Homepage/Contact.css
+++ b/src/components/Homepage/Contact.css
@@ -36,6 +36,7 @@
 
 .contact-content {
     max-height: 0;
+    overflow: hidden;
 }
 
 .contact-content.open {
